--- a/21_3_image_toggle/src/App.css
+++ b/21_3_image_toggle/src/App.css
@@ -5,5 +5,15 @@ body {
   height: 90vh;
 }
 .container {
-  padding: 2rem;
+  margin: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  width: 45vw;
+  margin: 1rem;
+  box-shadow: 5px 5px 20px gray;
+  border-radius: 10px;
 }
