--- a/21_2_play_pause_video/src/App.css
+++ b/21_2_play_pause_video/src/App.css
@@ -5,21 +5,44 @@ body {
   height: 90vh;
 }
 .container {
-  padding: 2rem;
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  width: 45vw;
+  margin: 1rem;
+  box-shadow: 5px 5px 20px gray;
+  border-radius: 10px;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-play {
+  background: url("./img/icons8-play-64.png") no-repeat center center/cover;
+}
+
+.btn-pause {
+  background: url("./img/icons8-pause-64.png") no-repeat center center/cover;
 }
 
 .btn {
   cursor: pointer;
   margin: 1rem;
-  padding: 1rem;
-  font-size: 1.5rem;
-  font-weight: bold;
-  background: #5cffc9e7;
-  border: 0.2rem solid #318858;
-  border-radius: 1rem;
-  color: black;
+  width: 5rem;
+  height: 5rem;
+  border: 0.2rem solid transparent;
 }
 
 .btn:hover {
-  background: #5cffc983;
+  margin: 0.5rem;
+  width: 5.5rem;
+  height: 5.5rem;
 }
